--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "build/icon.ico"
+      "icon": "../assets/icon.ico"
     },
     "nsis": {
       "oneClick": false,
